--- a/CameraDetectorDemo/src/main/res/values/strings.xml
+++ b/CameraDetectorDemo/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">CameraDetectorDemo</string>
     <string name="action_settings">Settings</string>
-    <string name="speech_prompt">Say something&#8320;</string>
-    <string name="speech_error">Try again please</string>
+    <string name="speech_error">Veuillez réessayer</string>
     <string name="speech_not_supported">Sorry ! Your device doesn\'t support speech</string>
     <string name="tap_on_mic">Tap on mic to speak</string>
 </resources>
